--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,14 +12,31 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+  /* outline: 1px solid black */
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-  /* outline: 1px solid black */
+.success_popup{
+  animation-name: slide;
+  animation-duration: 0.5s;
+}
+
+@keyframes slide {
+  0%{
+    transform: scale(1); 
+  }
+  50%{
+    transform: scale(1.1);
+  }
+  100%{
+    transform: scale(1)
+  }
 }
 
 /* @media (prefers-color-scheme: dark) {
