--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+    background-color: #fbfaf4;
 }
 
 * {
@@ -26,6 +28,16 @@ a {
   animation-name: slide;
   animation-duration: 0.5s;
 }
+
+/* input[type=number] {
+  -moz-appearance: textfield;
+} */
+
+/* input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button{
+  -webkit-appearance: none !important;
+  margin: 0;
+} */
 
 @keyframes slide {
   0%{
