--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,15 +29,15 @@ a {
   animation-duration: 0.5s;
 }
 
-/* input[type=number] {
+input[type=number] {
   -moz-appearance: textfield;
-} */
+} 
 
 /* input::-webkit-inner-spin-button,
 input::-webkit-outer-spin-button{
   -webkit-appearance: none !important;
   margin: 0;
-} */
+}
 
 @keyframes slide {
   0%{
